syntax = "proto3";
package listah.v1;


option go_package = "cornucopia/listah/internal/pkg/proto/listah/v1";


import "listah/v1/commons.proto";
import "google/protobuf/timestamp.proto";



message ItemServiceCreateOneRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string quantity = 4;
    string note = 5;
    string category_name = 6 [json_name = "category_name"];
    string category_id = 7 [json_name = "category_id"];
    string store_name = 8 [json_name = "store_name"];
    string store_id = 9 [json_name = "store_id"];
    // purchase_history = 9; //ToDo: Determine if purchase history is needed
    // bool active = 20;
    google.protobuf.Timestamp reactivate_at = 21 [json_name = "reactivate_at"];
    Audit audit = 50;
}
message ItemServiceCreateOneResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string quantity = 4;
    string note = 5;
    string category_name = 6 [json_name = "category_name"];
    string category_id = 7 [json_name = "category_id"];
    string store_name = 8 [json_name = "store_name"];
    string store_id = 9 [json_name = "store_id"];
    // purchase_history = 9; //ToDo: Determine if purchase history is needed
    // bool active = 20;
    google.protobuf.Timestamp reactivate_at = 21 [json_name = "reactivate_at"];
    Audit audit = 50;
}
message ItemServiceCreateManyRequest {
    repeated ItemServiceCreateOneRequest item = 1;
}
message ItemServiceCreateManyResponse {
    repeated ItemServiceCreateOneResponse item = 1;
}


message ItemServiceReadOneRequest {
    string id = 1;
}
message ItemServiceReadOneResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string quantity = 4;
    string note = 5;
    string category_name = 6 [json_name = "category_name"];
    string category_id = 7 [json_name = "category_id"];
    string store_name = 8 [json_name = "store_name"];
    string store_id = 9 [json_name = "store_id"];
    // purchase_history = 9; //ToDo: Determine if purchase history is needed
    // bool active = 20;
    google.protobuf.Timestamp reactivate_at = 21 [json_name = "reactivate_at"];
    Audit audit = 50;
}
message ItemServiceReadManyRequest {
    repeated ItemServiceReadOneRequest item = 1;
}
message ItemServiceReadManyResponse {
    repeated ItemServiceReadOneResponse item = 1;
}


message ItemServiceUpdateOneRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string quantity = 4;
    string note = 5;
    string category_name = 6 [json_name = "category_name"];
    string category_id = 7 [json_name = "category_id"];
    string store_name = 8 [json_name = "store_name"];
    string store_id = 9 [json_name = "store_id"];
    // purchase_history = 9; //ToDo: Determine if purchase history is needed
    // bool active = 20;
    google.protobuf.Timestamp reactivate_at = 21 [json_name = "reactivate_at"];
    Audit audit = 50;
}
message ItemServiceUpdateOneResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string quantity = 4;
    string note = 5;
    string category_name = 6 [json_name = "category_name"];
    string category_id = 7 [json_name = "category_id"];
    string store_name = 8 [json_name = "store_name"];
    string store_id = 9 [json_name = "store_id"];
    // purchase_history = 9; //ToDo: Determine if purchase history is needed
    // bool active = 20;
    google.protobuf.Timestamp reactivate_at = 21 [json_name = "reactivate_at"];
    Audit audit = 50;
}
message ItemServiceUpdateManyRequest {
    repeated ItemServiceUpdateOneRequest item = 1;
}
message ItemServiceUpdateManyResponse {
    repeated ItemServiceUpdateOneResponse item = 1;
}


message ItemServiceDeleteOneRequest {
    string id = 1;
    Audit audit = 50;
}
message ItemServiceDeleteOneResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string quantity = 4;
    string note = 5;
    string category_name = 6 [json_name = "category_name"];
    string category_id = 7 [json_name = "category_id"];
    string store_name = 8 [json_name = "store_name"];
    string store_id = 9 [json_name = "store_id"];
    // purchase_history = 9; //ToDo: Determine if purchase history is needed
    // bool active = 20;
    google.protobuf.Timestamp reactivate_at = 21 [json_name = "reactivate_at"];
    Audit audit = 50;
}
message ItemServiceDeleteManyRequest {
    repeated ItemServiceDeleteOneRequest item = 1;
}
message ItemServiceDeleteManyResponse {
    repeated ItemServiceDeleteOneResponse item = 1;
}


message ItemServiceListItemsRequest {
    string id = 1;
}
message ItemServiceListItemsResponse {
    // string id = 1;
    // string name = 2;
    // string description = 3;
    // string note = 7;
    repeated string items = 20;
    // repeated ItemServiceReadOneResponse items = 20;
    // Audit audit = 50;
    // string id = 1;
    // string name = 2;
    // string description = 3;
    // string note = 7;
    // string category = 8;
    //     string category_id = 8;
    string category_name = 9;
    // Audit audit = 50;
}


service ItemService {
    rpc CreateOne(ItemServiceCreateOneRequest) returns (ItemServiceCreateOneResponse){}
    rpc CreateMany(ItemServiceCreateManyRequest) returns (ItemServiceCreateManyResponse){}
    rpc ReadOne(ItemServiceReadOneRequest) returns (ItemServiceReadOneResponse){}
    rpc ReadMany(ItemServiceReadManyRequest) returns (ItemServiceReadManyResponse){}
    rpc UpdateOne(ItemServiceUpdateOneRequest) returns (ItemServiceUpdateOneResponse){}
    rpc UpdateMany(ItemServiceUpdateManyRequest) returns (ItemServiceUpdateManyResponse){}
    rpc DeleteOne(ItemServiceDeleteOneRequest) returns (ItemServiceDeleteOneResponse){}
    rpc DeleteMany(ItemServiceDeleteManyRequest) returns (ItemServiceDeleteManyResponse){}
    rpc ListItems(ItemServiceListItemsRequest) returns (ItemServiceListItemsResponse){}

}
